--- a/projects/rkm-profile-image/src/lib/rkm-profile-image.component.scss
+++ b/projects/rkm-profile-image/src/lib/rkm-profile-image.component.scss
@@ -1,50 +1,19 @@
-// ----- Personal preference -----
 *,
 *:before,
 *:after {
   box-sizing: border-box;
 }
 
-// ----- Variable Declarations -----
-@keyframes spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-// ----- Styles -----
-
-.table {
-  display: table;
+.rkm-profile-container {
   width: 100%;
   position: absolute;
 }
-.table-cell {
-  display: table-cell;
-  vertical-align: middle;
-}
-.modal {
-  width: 300px;
-  height: 400px;
-  margin: 0 auto;
-  background: #fff;
-  box-shadow: 0 40px 50px rgba(black, 0.35);
-  padding: 40px;
-}
-#mediaFile {
-  position: absolute;
-  top: -1000px;
-}
-#profile {
+
+.rkm-profile-container .profile {
   border-radius: 100%;
   width: 200px;
   height: 200px;
-  margin: 0 auto;
   position: relative;
-  top: -80px;
   margin-bottom: -80px;
   cursor: pointer;
   background: #f4f4f4;
@@ -70,19 +39,6 @@
     color: grey;
     opacity: 1;
   }
-  &.dragging {
-    background-image: none !important;
-    .dashes {
-      animation-duration: 10s;
-      animation-name: spin;
-      animation-iteration-count: infinite;
-      animation-timing-function: linear;
-      opacity: 1 !important;
-    }
-    label {
-      opacity: 0.5 !important;
-    }
-  }
   &.hasImage {
     .dashes,
     label {
@@ -91,7 +47,4 @@
       user-select: none;
     }
   }
-}
-// ----- Mobile styles -----
-@media only screen and (max-device-width: 736px) {
 }
